@@ -1,3 +1,9 @@
+2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/ui/main_app.rb: Now saves the "scan clipboard" option in
+    the config file. Adds ctrl + shift + S as keyboard shortcut. Reported
+    by Dmitry Rutsky (Debian bug #442336).
+
 2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/source_base.rb: Yet another problem with cache fixed.
